maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:4: error: not found: value keepHandOnWall
	keepHandOnWall()
        ^