maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
while(!estSurBiscuit()){
	keepHandOnWall()
}
prendBiscuit()
}


def keepHandOnSideWall(){
	gauche()
	if(estFaceMur()){
		droite()
		if(!estFaceMur){avance()}else{droite()}
		
	}else{
		avance()
	}
}
